<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/feed"
            android:icon="@drawable/ic_feed"
            android:title="@string/feed"/>

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"/>
        <item
            android:id="@+id/terms"
            android:icon="@drawable/ic_terms"
            android:title="@string/terms_and_conditions"/>

    </group>


            <item
                android:id="@+id/log_out"
                android:title="@string/log_out"
                android:icon="@drawable/ic_exit">

            </item>


</menu>