<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="5dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/profile_picture_desc"
            android:src="@drawable/ic_fingerprint_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/comment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="148dp"
                android:paddingTop="7dp"
                android:text="@string/user_tag"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/right_header_info"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:paddingStart="0dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/location_icon"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="0dp"
                    android:src="@drawable/ic_post_location" />

                <TextView
                    android:id="@+id/post_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="3dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="0dp"
                    android:text="@string/sample_location"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/comment_time_passed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="0dp"
                    android:text="@string/sample_time_passed"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">

            <!-- Give this textview bigger width, smaller text otherwise doesn't display on smaller screens-->

            <TextView
                android:id="@+id/comment_text_here"
                android:layout_width="257dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/vote_layout"
                android:lineSpacingExtra="2dp"
                android:lineSpacingMultiplier="1.15"
                android:padding="10dp"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/sample_text_long"
                android:textColor="#1C2833"
                android:textSize="14sp" />

            <!--  center up and down vote vertically  WITH  android:layout_alignParentRight-->
            <LinearLayout
                android:id="@+id/vote_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingStart="0dp"
                android:paddingEnd="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/up_vote"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/ic_keyboard_arrow_up_black"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/vote_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/sample_comment_size"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/down_vote"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/ic_keyboard_arrow_down_black_24dp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="20dp"
                android:layout_marginEnd="12dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ic_flag_black_24dp"
                android:backgroundTint="@color/colorPrimary" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>