<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".log_in">

    <!--Overall layout-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg2"
        >

        <!--logo-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />


        </LinearLayout>
        <!--Text boxes and button -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="62dp"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/inp_rou"
                android:gravity="center"
                android:hint="@string/username_hint"
                android:padding="8dp" />

            <EditText
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/inp_rou"
                android:gravity="center"
                android:hint="@string/password_hint"
                android:padding="8dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_btn"
                android:text="@string/login_string"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>