<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom ="10dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_fingerprint_black_24dp"
                    android:contentDescription="@string/profile_picture_desc" />

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/ic_add_a_photo_black_24dp"
                    android:textColor="#fff"
                    android:textStyle="bold" />

            </RelativeLayout>


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                card_view:cardCornerRadius="10dp">

                <EditText
                    android:id="@+id/confession_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:hint="@string/what_s_on_your_mind"

                    android:minWidth="400dp"
                    android:minHeight="300dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:textSize="20sp"
                    android:inputType=""
                    android:importantForAutofill="no" tools:targetApi="o" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingStart="25dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp">


            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/post_btn"
                android:text="@string/confess"
                android:textColor="#fff"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/post_btn"
                android:text="@string/cancel"
                android:textColor="#fff"
                android:textStyle="bold" />


        </RelativeLayout>

    </LinearLayout>

</ScrollView>

