<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" 
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg2"
	tools:context=".LogInActivity">

    <!--Constraint layout great for designing views with drag and drop.
    used here to contain all elements-->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--Logo header -->
        <ImageView
            android:id="@+id/logo_header"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="20dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.123"
            android:contentDescription="@string/logo_header" />

        <!--username textfield -->
        <EditText
            android:id="@+id/username"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="someone@student.uml.edu"
            android:background="@drawable/inp_rou"
            android:gravity="start"
            android:hint="@string/username_hint"
            android:inputType=""
            android:padding="8dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.763"
            tools:targetApi="o"
            />

        <!--password textfield -->
        <EditText
            android:id="@+id/password"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@drawable/inp_rou"
            android:gravity="start"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.865"
            tools:targetApi="o" />

        <!--uLogin button-->
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="516dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/login_btn"
            android:padding="2dp"
            android:text="@string/login_string"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold"
            android:onClick="submitLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
			
			    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>