<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Top content-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--menu and login -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_bg"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- menu -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_menu_black_24dp" />


            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="57dp"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login_string"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/inp_rou"
                android:gravity="center"
                android:hint="@string/username_hint"
                android:padding="8dp"
                android:textColor="#fff" />

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/inp_rou"
                android:gravity="center"
                android:hint="@string/password_hint"
                android:padding="8dp"
                android:textColor="#fff" />

            <Button
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_btn"
                android:text="GO!"
                android:textColor="#fff"
                android:textSize="15sp" />

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>